test/expected/explain_frg_v.out
explain void f(register i)
               ^
16: error: implicit "int" is illegal since C99
